[package]
name = "metaplex_decoder"
version = "0.1.0"
edition = "2018"

[lib]
name = "metaplex_decoder"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
solana-program = "1.7.11"
metaplex-token-metadata = "0.0.1"
serde_json = "1.0.67"
serde = "1.0.130"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]